fixed alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,12 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
+  .about-section, .contact-section{
+    padding: 2rem;
+  }
+  /* .projects-section .row{
+    flex-direction: column;
+  } */
   :root {
     scroll-behavior: smooth;
   }
@@ -11078,6 +11084,7 @@ body {
 
 .masthead {
   position: relative;
+  overflow: hidden;
   width: 100%;
   height: auto;
   min-height: 35rem;
@@ -11131,6 +11138,8 @@ body {
 } */
 
 .about-section {
+  position: relative;
+  overflow: hidden;
   min-height: 100vh; /* Ensures the About section fills the entire viewport */
   display: flex;
   justify-content: center; /* Horizontally centers the content */
@@ -11173,33 +11182,16 @@ body {
   }
 }
 
-.signup-section {
-  padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("../assets/img/bg-signup.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-}
-.signup-section .form-signup input {
-  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  padding: 1.25rem 2rem;
-  height: auto;
-  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 80%;
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-  border: 0;
-}
-
 .contact-section {
-  min-height: 72vh;
+  position: relative;
+  overflow: hidden;
+  min-height: 92vh;
   display: flex;
-  padding-top: 5rem;
+  /* padding-top: 5rem; */
   justify-content: center;
   align-items: center;
-  text-align: center;
-  box-sizing:border-box;
+  /* text-align: center; */
+  /* box-sizing:border-box; */
 }
 .contact-section .card {
   border: 0;
@@ -11237,5 +11229,8 @@ body {
 }
 
 .footer {
-  padding: 5rem 0;
+  /* padding: 5rem 0; */
+  position: absolute;
+  bottom: 0;
+  /* width: 100%; */
 }
